[tool.poetry]
name = "disease-lab"
version = "0.1.0"
description = "Knowledge graph informed AI for disease research"
authors = ["James Dominguez <james@keppylab.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"
instructor = "^1.3.2"
openai = "^1.30.4"
wandb = "^0.17.0"
asyncio = "^3.4.3"
langchain = "^0.2.1"
transformers = "^4.41.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
prompt-toolkit = "^3.0.45"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
